--- a/parténaire/parténaire.html
+++ b/parténaire/parténaire.html
@@ -256,7 +256,7 @@
                 </div>
                 
                 <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white">Bulletin</h4>
+                    <h4 class="text-white">Nos Comptes</h4>
                     <hr class="w-25 text-secondary mb-4" style="opacity: 1;">
                     <form action="">
                         <div class="input-group">
